--- a/week_01/in_class/index.html
+++ b/week_01/in_class/index.html
@@ -33,8 +33,8 @@
         var num = 100;
         var num1 = "100";
         if (num === num1) {alert("this is equal")}
-        let newArr = ["foo", "bar", 12];
-        let var = newArr[1];
+        /*let newArr = ["foo", "bar", 12];
+        let var = newArr[1];*/
     </script>
 
 </head>
