--- a/week_04/homework.html
+++ b/week_04/homework.html
@@ -37,7 +37,7 @@
 
 <body>
   <div id="container">
-    <h1>Interest Rates by Year (Canada)</h1>
+    <h1>Interest Rates by Month (Canada)</h1>
     <p>This line chart uses long-term-interest-canada.csv 
       which shows change of monthly interest rates over time. Source: 
       <a href="https://data.oecd.org/interest/long-term-interest-rates.htm#indicator-chart">OECD</a>
