--- a/week_04/homework.html
+++ b/week_04/homework.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Basic line chart</title>
+  <title>Line chart</title>
   <style>
      * {
       font-family: Arial, Helvetica, sans-serif;
@@ -39,7 +39,7 @@
   <div id="container">
     <h1>Interest Rates by Month (Canada)</h1>
     <p>This line chart uses long-term-interest-canada.csv 
-      which shows change of monthly interest rates over time. Source: 
+      which shows change of monthly interest rates in 2020 by month. Source: 
       <a href="https://data.oecd.org/interest/long-term-interest-rates.htm#indicator-chart">OECD</a>
     </p>
    <div id="chart"></div>
