Updated three charts

--- a/week_06/bar_state_armed.html
+++ b/week_06/bar_state_armed.html
@@ -20,7 +20,12 @@
     <div id="container">
         <h1>People Shot by Police by State and Armed</h1>
         <p>This bar chart uses data from the Washington Post on people who were shot and killed by policy officers in 2015. 
-          <a href="https://github.com/tiffanyfrance/CAPP30239_FA22/blob/main/week_06/a3cleanedonly2015.json">Source</a>
+            It illustrates the states where the shootings occured, and whether the person shot was armed.
+            I initially used a donut plot to illustrate a geographic breakdown of where police shootings occurred. 
+            However, this was not effective as the labels overlapped greatly since there are many states. 
+            For this bar plot, it would be useful to scale the data by the state population to illustrate which states are
+            disproportionately affected by police brutality. It might also be interesting to incorporate information on gun control laws.
+          <a href="https://github.com/tiffanyfrance/CAPP30239_FA22/blob/main/week_06/a3cleanedonly2015.json">Data source</a>
         </p>
        <div id="chart"></div>
       </div>
