--- a/week_06/beeswarm.html
+++ b/week_06/beeswarm.html
@@ -20,8 +20,11 @@
 <body>
     <div id="container">
         <h1>People Shot by Police by Age</h1>
-        <p>This beeswarm plot uses data from the Washington Post on people who were shot and killed by policy officers in 2015. 
-          <a href="https://github.com/tiffanyfrance/CAPP30239_FA22/blob/main/week_06/a3cleanedonly2015.json">Source</a>
+        <p>This beeswarm chart uses data from the Washington Post on people who were shot and killed by policy officers in 2015. 
+            It illustrates the age distribution of people shot by the police. What is most striking about this plot 
+            are the anomalous data points: those who were very young, and those who were very old. 
+            Supplementary information to filter the plot by demographic factors such as race and gender could add further insights.
+          <a href="https://github.com/tiffanyfrance/CAPP30239_FA22/blob/main/week_06/a3cleanedonly2015.json">Data source</a>
         </p>
        <div id="chart"></div>
       </div>
