Added legends, resized charts

--- a/final_project/beeswarm_temp.html
+++ b/final_project/beeswarm_temp.html
@@ -19,6 +19,8 @@
 </head>
 <body>
     <div id="container">
+        <div id="legend"></div>
+        
         <h1>Maximum Temperature</h1>
        <div id="chart_max"></div>
 
@@ -34,6 +36,7 @@
 
       </div>
       <script src="https://d3js.org/d3.v7.min.js"></script>
+      <script src="d3-color-legend.js"></script>
       <script src="beeswarm_temp.js"></script>
 </body>
 </html>
