--- a/final_project/beeswarm_rain.html
+++ b/final_project/beeswarm_rain.html
@@ -8,7 +8,7 @@
     <style>
         svg {
             width: 100%;
-            max-height: 250px; 
+            max-height: 200px; 
         }
         text {
             font-family: Arial, Helvetica, sans-serif;
@@ -19,6 +19,8 @@
 </head>
 <body>
     <div id="container">
+        <div id="legend"></div>
+        
         <h1>Maximum Rainfall</h1>
        <div id="chart_max"></div>
 
@@ -33,6 +35,7 @@
       </p>
       </div>
       <script src="https://d3js.org/d3.v7.min.js"></script>
+      <script src="d3-color-legend.js"></script>
       <script src="beeswarm_rain.js"></script>
 </body>
 </html>
