--- a/final_project/line_year_rain.html
+++ b/final_project/line_year_rain.html
@@ -12,7 +12,7 @@
     }
 
     #container {
-      max-width: 900px;
+      max-width: 800px;
       margin: 0 auto;
     }
 
@@ -42,8 +42,10 @@
       <a href="https://data.oecd.org/interest/long-term-interest-rates.htm#indicator-chart">OECD</a>
     </p>
    <div id="chart"></div>
+   <div id="legend"></div>
   </div>
   <script src="https://d3js.org/d3.v7.min.js"></script>
+  <script src="d3-color-legend.js"></script>
   <script src="line_year_rain.js"></script>
 </body>
 </html>
