First draft of final charts

--- a/final_project/box_plot.html
+++ b/final_project/box_plot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beesawrm Visualization</title>
+    <title>Box Plot Visualization</title>
     <style>
         svg{
             width: 100%;
@@ -21,7 +21,7 @@
     <div id="container">
         
         <h1>Total Rainfall</h1>
-       <div id="chart"></div>
+       <div id="chart_box_plot"></div>
        <p>
         <a href="https://github.com/tiffanyfrance/CAPP30239_FA22/blob/main/week_06/a3cleanedonly2015.json">Data source</a>
       </p>
