--- a/final_project/line_temp.html
+++ b/final_project/line_temp.html
@@ -41,8 +41,8 @@
     <p>Source: 
       <a href="https://data.oecd.org/interest/long-term-interest-rates.htm#indicator-chart">OECD</a>
     </p>
-   <div id="chart"></div>
-   <div id="legend"></div>
+   <div id="chart_line_temp"></div>
+   <div id="legend_line_temp"></div>
   </div>
   <script src="https://d3js.org/d3.v7.min.js"></script>
   <script src="d3-color-legend.js"></script>
