--- a/final_project/heat_map_temp_decade.html
+++ b/final_project/heat_map_temp_decade.html
@@ -20,8 +20,8 @@
 <body>
     <div id="container">
         
-        <h1>Total Rainfall</h1>
-       <div id="chart_heat_map"></div>
+        <h1>Mean Temperature</h1>
+       <div id="chart_heat_map_temp_decade"></div>
        <p>
         <a href="https://github.com/tiffanyfrance/CAPP30239_FA22/blob/main/week_06/a3cleanedonly2015.json">Data source</a>
       </p>
@@ -30,6 +30,6 @@
       <script src="d3-color-legend.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
       <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-      <script src="heat_map.js"></script>
+      <script src="heat_map_temp_decade.js"></script>
 </body>
 </html>
