--- a/final_project/beeswarm_temp.html
+++ b/final_project/beeswarm_temp.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div id="container">
-        <div id="legend"></div>
+        <div id="legend_beeswarm_temp"></div>
         
         <h1>Maximum Temperature</h1>
        <div id="chart_max"></div>
