--- a/final_project/final_project_v2.html
+++ b/final_project/final_project_v2.html
@@ -224,7 +224,7 @@
         <div class="flex-container">
             <div class="flex-item">
                 <h2>
-                    No clear trend in variation in rainfall across years or decades. 
+                    However, this trend has not been observed across the years or decades. 
                 </h2>
                 <p>While increased rainfall variability features in some climate projection, it does not seem to be observed in the historical data. While there is significant variation in the range of rainfall recorded in a month across the years, there is no clear trend. Furthermore, when aggregated by decades, there seems to be limited variation in the range of monthly rainfall within a decade. Nonetheless, given the significant uncertainties on the future of rainfall in Singapore, preparing for greater extremes in rainfall on two fronts could be a prudent approach.</p>
             </div>
